Add ProductService and add some tests